hphp/test/zend/bad/ext/phar/tests/phar_construct_invalidurl.php
<?php
try {
	$a = new Phar('http://should.fail.com');
} catch (UnexpectedValueException $e) {
	echo $e->getMessage(),"\n";
}
try {
	$a = new Phar('http://');
} catch (UnexpectedValueException $e) {
	echo $e->getMessage(),"\n";
}
try {
	$a = new Phar('http:/');
} catch (UnexpectedValueException $e) {
	echo $e->getMessage(),"\n";
}
?>
===DONE===